# arxiv-line-digest

./: .env.example  .gitignore  CLAUDE.md  arxiv-paper-notifier-draft.md  pyproject.toml
.claude/agents/: developer.md  qa_engineer.md  system_architect.md
.claude/skills/commit/: SKILL.md
.claude/skills/consult/: SKILL.md
.github/workflows/: daily.yml
data/: notified.json
docs/: architecture.md  service-overview.md
docs/architecture-decisions/: ADR-001-execution-platform.md  ADR-002-datastore.md
docs/specs/: system-a.md  system-b.md
src/arxiv_digest/: config.py  main.py  models.py
src/arxiv_digest/notify/: line.py
src/arxiv_digest/scoring/: llm_scorer.py
src/arxiv_digest/sources/: arxiv.py  github_stars.py  hugging_face.py  papers_with_code.py
src/arxiv_digest/store/: dedup.py
tests/: test_dedup.py  test_main.py  test_notify.py  test_scorer.py  test_sources.py
